--- a/app/views/authors/_author.html.erb
+++ b/app/views/authors/_author.html.erb
@@ -2,3 +2,9 @@
   <li> <%= @author.name %></li>
   <li> <%= @author.hometown %></li>
 </ul>
+
+<!-- NOTE : Replacing the above with the below due to locals hash param in posts/show -->
+<ul>
+  <li> <%= post_author.name %></li>
+  <li> <%= post_author.hometown %></li>
+</ul>
