automatically backed up by learn

--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,2 +1,6 @@
 
 <%= render 'author '%>
+
+<!-- NOTE : Replacing the above with the below due to locals hash param in posts/show -->
+
+<%= render partial: "authors/author", locals: {post_author: @author} %>
