automatically backed up by learn

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 Information About the Post
 
-<%= render partial: "authors/author", locals: {post_author: @author} %>
+<%= render partial: "authors/author", locals: {post_author: @post.author} %>
 
 <%= @post.title %>
 <%= @post.content %>
