--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,4 +1,6 @@
-<ul>
-  <li> <%= author.name %></li>
-  <li> <%= author.hometown %></li>
-</ul>
+
+<!-- <%= render 'author '%> -->
+
+<!-- NOTE : Replacing the above with the below due to locals hash param in posts/show -->
+
+<%= render partial: "author", locals: {post_author: @author} %>
